# instabids-agentic-boilerplate

./: .env.template  .gitignore  BUILD_STATUS.md  LICENSE  README.md  main.py  poetry.lock.placeholder  pyproject.toml
.adk/: components.json
.github/workflows/: ci_cd_for_ai.yml
.prompts/conventions/: docstring_style.md  git_commit_style.md
.prompts/meta/: choose_system_prompt.md  choose_task_prompt.md
.prompts/system/: adk_specialist.md  debugging_agent.md  homeowner_agent_writer.md  master_code_builder.md  prompt_selector.md  supabase_integration_agent.md
.prompts/tasks/: create_llm_agent.md  critique_code.md  debug_supabase.md  doctor_route.md  extend_tool.md  generate_tests.md
db/migrations/: 001_initial_schema.sql  002_bid_cards.sql  003_messages_and_preferences.sql  004_contractors_and_bids.sql  005_vector_search.sql  006_storage_setup.sql
docs/: ADK_BEST_PRACTICES.md  ARCHITECTURE.md  COMMON_PITFALLS.md  README_FOR_AI_CODERS.md  SUPABASE_PATTERNS.md
scripts/: check_onboarding.py  check_pitfalls.py  reset_env.ps1  reset_env.sh
src/windsurf_agents/: __init__.py
src/windsurf_agents/bidcard/: __init__.py  agent.py
src/windsurf_agents/core/: __init__.py  prompt_selector.py
src/windsurf_agents/homeowner/: __init__.py  agent.py
src/windsurf_agents/tools/: __init__.py  supabase_tools.py  vision_tools.py
src/windsurf_agents/utils/: __init__.py  ports.py
supabase/: config.toml  seed.sql
tests/: __init__.py  test_adk_patterns.py
